--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Chariction</title>
-  <base href="/">
+  <base href="/chariction.github.io/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href=".favicon.ico">
 <style>@import"https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap";*{margin:0;padding:0}body{font-family:Be Vietnam Pro,sans-serif;font-family:Pacifico,cursive;font-family:Teko,sans-serif}:root{--primary-color:#605DC8;--secondary-color:#8B89E6;--chariction-color:#303841;--accent-color:#e8e7fa;--shadow-color:#E8E8E8}</style><link rel="stylesheet" href="styles.5c778a69c646cbe9.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.5c778a69c646cbe9.css"></noscript></head>
