--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
-  <title>Chariction</title>
+  <title>Chariction IO</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href=".favicon.ico">
@@ -8,5 +8,4 @@
 <body>
   <app-root></app-root>
 <script src="runtime.89424a2453fbce0c.js" type="module"></script><script src="polyfills.a2eb0ee4382a58df.js" type="module"></script><script src="main.ef8928b388ebc71c.js" type="module"></script>
-
 </body></html>
